[gd_scene load_steps=4 format=2]

[ext_resource path="res://scripts/menu.gd" type="Script" id=1]
[ext_resource path="res://assets/theme.theme" type="Theme" id=2]
[ext_resource path="res://scripts/border.gd" type="Script" id=3]

[node name="Viewport" type="MarginContainer"]
anchor_right = 1.0
anchor_bottom = 1.0
theme = ExtResource( 2 )
custom_constants/margin_right = 40
custom_constants/margin_top = 30
custom_constants/margin_left = 40
custom_constants/margin_bottom = 30
__meta__ = {
"_edit_use_anchors_": false
}

[node name="MainMenu" type="VBoxContainer" parent="."]
margin_left = 40.0
margin_top = 30.0
margin_right = 1240.0
margin_bottom = 690.0
script = ExtResource( 1 )

[node name="Title" type="Label" parent="MainMenu"]
margin_right = 1200.0
margin_bottom = 19.0
text = "Human Computer Simulator"
uppercase = true

[node name="Display" type="MarginContainer" parent="MainMenu"]
margin_top = 27.0
margin_right = 1200.0
margin_bottom = 625.0
size_flags_vertical = 3
script = ExtResource( 3 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Spacing" type="Control" parent="MainMenu"]
margin_top = 633.0
margin_right = 1200.0
margin_bottom = 633.0

[node name="Buttons" type="HBoxContainer" parent="MainMenu"]
margin_left = 290.0
margin_top = 641.0
margin_right = 910.0
margin_bottom = 660.0
size_flags_horizontal = 4
custom_constants/separation = 500

[node name="Start" type="Button" parent="MainMenu/Buttons"]
margin_right = 50.0
margin_bottom = 19.0
size_flags_horizontal = 4
text = "START"
flat = true

[node name="Credits" type="Button" parent="MainMenu/Buttons"]
margin_left = 550.0
margin_right = 620.0
margin_bottom = 19.0
text = "CREDITS"

[node name="Timer" type="Timer" parent="."]
wait_time = 0.25
autostart = true
[connection signal="pressed" from="MainMenu/Buttons/Start" to="MainMenu" method="_on_Start_pressed"]
[connection signal="pressed" from="MainMenu/Buttons/Credits" to="MainMenu" method="_on_Credits_pressed"]
[connection signal="timeout" from="Timer" to="MainMenu" method="_on_Timer_timeout"]
